--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 # Public Environment Variables
 NEXT_PUBLIC_CURRENCY=$
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=''
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c3VubnktcHVnLTkwLmNsZXJrLmFjY291bnRzLmRldiQ
+
 
 # Private Environment Variables
-CLERK_SECRET_KEY=''
-MONGODB_URI=''
+CLERK_SECRET_KEY=sk_test_fmFIFl7NqbCneNV679B20utj2pfFJxGnoJNDfukhcr
+MONGODB_URI='mongodb+srv://abdullahibashirtwd:Abbtwd2019@cluster0.6usak.mongodb.net/?'
 INNGEST_SIGNING_KEY=''
 INNGEST_EVENT_KEY=''
 # Cloudinary
